[gd_scene load_steps=6 format=2]

[ext_resource path="res://ressources/fonts/button_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://ressources/fonts/Exo-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/godot-twicil/godot_twicil.gd" type="Script" id=3]
[ext_resource path="res://ressources/scripts/twitch_bot_root.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[node name="twitch_bot_root" type="Node"]

[node name="main menu" type="Control" parent="."]
anchor_right = 0.02
margin_right = 19.52
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TwiCIL" type="Node" parent="main menu"]
script = ExtResource( 3 )

[node name="headline" type="Label" parent="main menu"]
margin_left = 1.54756
margin_top = 20.0
margin_right = 1025.55
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Twitch Bot"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_connect" type="Button" parent="main menu"]
anchor_right = 1.0
anchor_bottom = 60.0
margin_left = 311.751
margin_top = 114.592
margin_right = 674.751
margin_bottom = -2204.41
custom_fonts/font = ExtResource( 1 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_create_config" type="Button" parent="main menu"]
margin_left = 312.766
margin_top = 334.652
margin_right = 710.766
margin_bottom = 420.652
custom_fonts/font = ExtResource( 1 )
text = "Create / Change Configuration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_disconnect" type="Button" parent="main menu"]
margin_left = 313.0
margin_top = 225.0
margin_right = 712.0
margin_bottom = 307.0
custom_fonts/font = ExtResource( 1 )
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="main menu/button_connect" to="main menu" method="_on_button_connect_pressed"]
[connection signal="pressed" from="main menu/button_create_config" to="main menu" method="_on_button_create_config_pressed"]
[connection signal="pressed" from="main menu/button_disconnect" to="main menu" method="_on_button_disconnect_pressed"]
